@@ -21,6 +21,7 @@ Ver.5.5 (in development)
 - The Access-Control-Allow-Origin header can be appended with variable $accessControlAllowOrigin
   in params.php file.
 - Update sample_schema_mysql.txt, recipe.rb and sample_spec.rb for the INTER-Mediator-Server VM.
+- The getDataAtLastRecord(key) method in IMLibContext class is added.
 - [BUG FIX] In case of the '#' target specification was placed on second or later item in data-im
   attribute, the field value wasn't shown in the node (Thanks to Tomomitsu Baba).
 - [BUG FIX] The field which applied a data converter class in FMS's portal, the converter didn't
